# use-cases

./: LICENSE  README.md  download-data.py  justfile  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
free-living-birds/scripts/: README.md
male-seed-beetle/scripts/: README.md  convert-with-core.py  download-data-custom.py  download-data.py
seed-bank-dynamics/scripts/: README.md  download-data.py
