[tool.poetry]
name = "seedcase examples"
version = "0.1.0"
description = "Showing how Seedcase Sprout works"
authors = ["Kris Beicher <112945740+K-Beicher@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
