[tool.poetry]
name = "examples"
version = "0.1.0"
description = "Showing how Seedcase Sprout works"
authors = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
  "Signe Kirk Brødbæk <signekb@clin.au.dk>",
  "Marton Vago <marton.vago95@gmail.com >",
]
maintainers = [
  "Luke W. Johnston <lwjohnst@gmail.com>",
  "Kristiane Beicher <kris.beicher@clin.au.dk>",
  "Signe Kirk Brødbæk <signekb@clin.au.dk>",
  "Marton Vago <marton.vago95@gmail.com >",
]
license = "MIT"
readme = "README.md"
repository = "https://github.com/seedcase-project/examples"
package-mode = false

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/seedcase-project/examples/issues"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.5.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.2"
commitizen = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
